--- a/acknowledgement.html
+++ b/acknowledgement.html
@@ -23,7 +23,7 @@
 <meta name="author" content="R Contribution Working Group" />
 
 
-<meta name="date" content="2022-11-28" />
+<meta name="date" content="2022-11-29" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -302,7 +302,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
             <section class="normal" id="section-">
 <div id="acknowledgement" class="section level1 unnumbered hasAnchor">
 <h1>Acknowledgement<a href="acknowledgement.html#acknowledgement" class="anchor-section" aria-label="Anchor link to header"></a></h1>
-<p>This guide draws on documentation and articles written by the R Core Team. The first version of the guide was heavily influence by the <a href="https://devguide.python.org/">Python Developer’s Guide</a>.</p>
+<p>This guide draws on documentation and articles written by the R Core Team. The first version of the guide was heavily influenced by the <a href="https://devguide.python.org/">Python Developer’s Guide</a>.</p>
 <p>Initial chapters of the guide were developed by Saranjeet Kaur Bhogal, in a project funded by the R Foundation, mentored by Heather Turner and Michael Lawrence. This initial version was upgraded in a <a href="https://github.com/rstats-gsod/gsod2022/wiki/GSOD-2022-Proposal">Google Season of Docs 2022</a> project with Saranjeet Kaur Bhogal and Lluís Revilla Sancho working as technical writers managed by Nicolas Bennett and overseen by a <a href="https://github.com/rstats-gsod/gsod2022/wiki/GSOD-2022-Proposal#steering-committee">Steering Committee</a> including representatives from R Core and the wider R community.</p>
 <p>This guide has benefited and continues to benefit from varied contributions by several <a href="https://github.com/r-devel/rdevguide#contributors-">contributors</a>.</p>
 <p><a href="https://creativecommons.org/licenses/by/4.0/" width="180px"><img src="img/ccby.png" alt="License: CC BY 4.0" /></a></p>
