--- a/News.html
+++ b/News.html
@@ -23,7 +23,7 @@
 <meta name="author" content="R Contribution Working Group" />
 
 
-<meta name="date" content="2022-11-30" />
+<meta name="date" content="2022-12-01" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -303,7 +303,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <p>Here are some resources that can be useful to keep up with the developments in R:</p>
 <div id="blogs" class="section level2 hasAnchor" number="12.1">
 <h2><span class="header-section-number">12.1</span> Blogs<a href="News.html#blogs" class="anchor-section" aria-label="Anchor link to header"></a></h2>
-<p>The <a href="https://www.r-project.org/">R project</a> maintains a list of public <a href="https://blog.r-project.org/">blogs</a> mainly written by the R Core Development Team. Daily news about R-devel can be found on the <a href="https://developer.r-project.org/blosxom.cgi/R-devel">Daily News about R-devel</a> blog which is updated daily.</p>
+<p>The <a href="https://www.r-project.org/">R project</a> maintains <a href="https://blog.r-project.org/">The R Blog</a> with posts mainly written by the R Core Team. News of changes in the development version of R found on the <a href="https://developer.r-project.org/blosxom.cgi/R-devel">Daily News about R-devel</a> blog which is updated daily.</p>
 </div>
 <div id="conferences" class="section level2 hasAnchor" number="12.2">
 <h2><span class="header-section-number">12.2</span> Conferences<a href="News.html#conferences" class="anchor-section" aria-label="Anchor link to header"></a></h2>
@@ -322,7 +322,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </div>
 <div id="twitter" class="section level2 hasAnchor" number="12.5">
 <h2><span class="header-section-number">12.5</span> Twitter<a href="News.html#twitter" class="anchor-section" aria-label="Anchor link to header"></a></h2>
-<p>Follow <a href="https://twitter.com/R_dev_news">@R_dev_news</a> on Twitter for the <a href="https://developer.r-project.org/RSSfeeds.html">R development updates</a> and <a href="https://developer.r-project.org/Blog/public/">blog post</a> announcements.</p>
+<p>Follow <a href="https://twitter.com/R_dev_news">@R_dev_news</a> on Twitter for news of <a href="https://developer.r-project.org/RSSfeeds.html">changes in the development version of R</a> and new posts on <a href="https://blog.r-project.org/">The R Blog</a> announcements.</p>
 
 </div>
 </div>
