--- a/Doc.html
+++ b/Doc.html
@@ -318,7 +318,64 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <p>This chapter is about the ways people can contribute to R’s documentation, with guidance on how to do that. Any time you feel that you can clarify or fill gaps in existing documentation, your contribution is welcome and appreciated. If you find it difficult to deal with the markup used in the source files, you can ask for help with that part too. Please do not let the material in this chapter stand between the documentation and your desire to help out. However, not every good faith effort to change or extend the documentation will be accepted - sometimes the suggested changes may be incorrect; other times, while a change in wording may make some things clearer and easier to understand, the finer details of some corner case may become less clear, leading to the suggested changes being declined or modified by a member of R Core before applying them (if they agree the issue is important enough to fix).</p>
 <div id="guidelines-for-writing-r-help-files" class="section level2 hasAnchor" number="8.1">
 <h2><span class="header-section-number">8.1</span> Guidelines for writing R help files<a href="Doc.html#guidelines-for-writing-r-help-files" class="anchor-section" aria-label="Anchor link to header"></a></h2>
-<p>The help files for R functions are written in ‘R documentation’ (<code>.Rd</code>) file format. It is a simple markup language with close resemblance to LaTeX. The <code>.Rd</code> file format can be further processed into a variety of formats, including LaTeX, HTML, and plain text. The <code>.Rd</code> files can be found in the <code>man</code> directory of the sources for the corresponding base package, for example <a href="https://svn.r-project.org/R/trunk/src/library/base/man/mean.Rd" class="uri">https://svn.r-project.org/R/trunk/src/library/base/man/mean.Rd</a>. Many authors of contributed R packages use the <a href="https://cran.r-project.org/package=roxygen2">roxygen2</a> package to write documentation, which generates <code>.Rd</code> files from comments in the package <code>.R</code> files. However, the help files in the base distribution are maintained by directly editing the <code>.Rd</code> files.</p>
+<p>The help files for R functions are written in ‘R documentation’ (<code>.Rd</code>) file format. It is a simple markup language with close resemblance to LaTeX. The <code>.Rd</code> file format can be further processed into a variety of formats, including LaTeX, HTML, and plain text. The <code>.Rd</code> files can be found in the <code>man</code> directory of the sources for the corresponding base package. For example, consider the <a href="https://svn.r-project.org/R/trunk/src/library/base/man/mean.Rd">mean.Rd</a> file.</p>
+<pre><code>% File src/library/base/man/mean.Rd
+% Part of the R package, https://www.R-project.org
+% Copyright 1995-2022 R Core Team
+% Distributed under GPL 2 or later
+
+\name{mean}
+\title{Arithmetic Mean}
+\usage{
+mean(x, \dots)
+
+\method{mean}{default}(x, trim = 0, na.rm = FALSE, \dots)
+}
+\alias{mean}
+\alias{mean.default}
+\arguments{
+  \item{x}{An \R object.  Currently there are methods for
+    numeric/logical vectors and \link[=Dates]{date},
+    \link{date-time} and \link{time interval} objects.  Complex vectors
+    are allowed for \code{trim = 0}, only.}
+  \item{trim}{the fraction (0 to 0.5) of observations to be
+    trimmed from each end of \code{x} before the mean is computed.
+    Values of trim outside that range are taken as the nearest endpoint.
+  }
+  \item{na.rm}{a logical evaluating to \code{TRUE} or \code{FALSE}
+    indicating whether \code{NA} values should be stripped before the
+    computation proceeds.} 
+  \item{\dots}{further arguments passed to or from other methods.}
+}
+\description{
+  Generic function for the (trimmed) arithmetic mean.
+}
+\value{
+  If \code{trim} is zero (the default), the arithmetic mean of the
+  values in \code{x} is computed, as a numeric or complex vector of
+  length one.  If \code{x} is not logical (coerced to numeric), numeric
+  (including integer) or complex, \code{NA_real_} is returned, with a warning.
+
+  If \code{trim} is non-zero, a symmetrically trimmed mean is computed
+  with a fraction of \code{trim} observations deleted from each end
+  before the mean is computed.
+}
+\references{
+  Becker, R. A., Chambers, J. M. and Wilks, A. R. (1988)
+  \emph{The New S Language}.
+  Wadsworth &amp; Brooks/Cole.
+}
+\seealso{
+  \code{\link{weighted.mean}}, \code{\link{mean.POSIXct}},
+  \code{\link{colMeans}} for row and column means.
+}
+\examples{
+x &lt;- c(0:10, 50)
+xm &lt;- mean(x)
+c(xm, mean(x, trim = 0.10))
+}
+\keyword{univar}</code></pre>
+<p>Many authors of contributed R packages use the <a href="https://cran.r-project.org/package=roxygen2">roxygen2</a> package to write documentation, which generates <code>.Rd</code> files from comments in the package <code>.R</code> files. However, the help files in the base distribution are maintained by directly editing the <code>.Rd</code> files.</p>
 <p>This section gives an overview of the <code>.Rd</code> format and summarises the <a href="https://developer.r-project.org/Rds.html">guidelines for writing the R help files</a>. The guidelines are intended for contributors to base R, but may also be useful for authors of contributed packages. Full documentation on writing R documentation files can be found in the <a href="https://cran.r-project.org/doc/manuals/r-release/R-exts.html#Writing-R-documentation-files">Writing R Extensions</a> manual.</p>
 <p>There are three main parts of an <code>.Rd</code> file:</p>
 <ol style="list-style-type: decimal">
