--- a/ReportingBugs.html
+++ b/ReportingBugs.html
@@ -23,7 +23,7 @@
 <meta name="author" content="R Contribution Working Group" />
 
 
-<meta name="date" content="2023-08-03" />
+<meta name="date" content="2023-08-05" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -399,10 +399,10 @@ When you are in doubt that there is a bug: (which should be the case most of the
 <h2><span class="header-section-number">4.8</span> Examples of Bug reports submitted on Bugzilla or R-devel mailing list<a href="ReportingBugs.html#examples-of-bug-reports-submitted-on-bugzilla-or-r-devel-mailing-list" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p>If you like to see how bugs are reported on Bugzilla, here are some examples:</p>
 <ol style="list-style-type: decimal">
-<li><p>A <a href="https://bugs.r-project.org/bugzilla/show_bug.cgi?id=17767">bug report</a> with a reproducible example, a patch, and a review.</p></li>
-<li><p>A <a href="https://stat.ethz.ch/pipermail/r-devel/2019-May/077855.html">bug report</a> submitted by Kara Woo which was promptly fixed via the R-devel mailing list. (More information about the R-devel mailing list can be found <a href="https://stat.ethz.ch/mailman/listinfo/r-devel">here</a>).</p></li>
-<li><p>A substring <a href="https://stat.ethz.ch/pipermail/r-devel/2019-February/077393.html">bug reported</a> by Toby Dylan Hocking and fixed by Tomas Kalibera, Feb 2019 via the R-devel mailing list.</p></li>
-<li><p>A gregexpr <a href="https://stat.ethz.ch/pipermail/r-devel/2019-February/077315.html">bug report and patch</a> submitted by Toby Dylan Hocking and merged by Tomas Kalibera, Feb 2019 via the R-devel mailing list.</p></li>
+<li><p><a href="https://bugs.r-project.org/bugzilla/show_bug.cgi?id=17767">Bug 17767 - Warning about incomplete argument within nlme</a>: A bug report with a reproducible example, a patch, and a review.</p></li>
+<li><p><a href="https://stat.ethz.ch/pipermail/r-devel/2019-May/077855.html">Possible bug when finding shared libraries during staged installation</a>: A bug report submitted by Kara Woo which was promptly fixed via the R-devel mailing list. (More information about the R-devel mailing list can be found <a href="https://stat.ethz.ch/mailman/listinfo/r-devel">here</a>).</p></li>
+<li><p><a href="https://stat.ethz.ch/pipermail/r-devel/2019-February/077393.html">Bug: time complexity of substring is quadratic as string size and number of substrings increases</a>: A substring reported by Toby Dylan Hocking and fixed by Tomas Kalibera, Feb 2019 via the R-devel mailing list.</p></li>
+<li><p><a href="https://stat.ethz.ch/pipermail/r-devel/2019-February/077315.html">patch for gregexpr(perl=TRUE)</a>: A gregexpr bug report and patch submitted by Toby Dylan Hocking and merged by Tomas Kalibera, Feb 2019 via the R-devel mailing list.</p></li>
 </ol>
 </div>
 <div id="see-also-1" class="section level2 hasAnchor" number="4.9">
