--- a/ReviewBugs.html
+++ b/ReviewBugs.html
@@ -147,7 +147,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
       <nav role="navigation">
 
 <ul class="summary">
-<img src="img/Rlogo.png" style="width:150px;padding:10px 0px 0px 10px;display: block;margin:auto;"></img>
+<img src="img/cover_page.png" style="width:150px;padding:10px 0px 0px 10px;display: block;margin:auto;"></img>
 
 <li class="divider"></li>
 <li><a href="index.html#section" id="toc-section"></a></li>
